kubernetes/frontendproxy/frontendproxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontendproxy
  labels:
    app: frontendproxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontendproxy
  template:
    metadata:
      labels:
        app: frontendproxy
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/conf.d
      volumes:
      - name: nginx-config
        configMap:
          name: frontendproxy-config
