kubernetes/frontendproxy/frontendproxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontendproxy
spec:
  selector:
    app: frontendproxy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
