kubernetes/frontendproxy/frontendproxy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontendproxy-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: omart.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontendproxy
            port:
              number: 80
